fix Scrollbar

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -1,5 +1,6 @@
 html {
   overflow-y: scroll;
+  scrollbar-width: none;
   overflow-x: hidden;
 }
 
